<resources>
    <string name="app_name">Cardiff City Fixtures</string>

    <string name="cardiff_city">Cardiff City</string>

    <!-- Activity titles -->
    <string name="fixture_edit_title">Edit fixture</string>
    <string name="fixture_title">Fixture</string>
    <string name="stats_title">Statistics</string>
    <string name="clubs_title">Clubs</string>
    <string name="club_edit_title">Edit club</string>
    <string name="competitions_title">Competitions</string>
    <string name="competition_edit_title">Edit competition</string>
    <string name="players_title">Players</string>
    <string name="edit_player_title">Edit player</string>
    <string name="seasons_title">Seasons</string>
    <string name="edit_season_title">Edit season</string>
    <string name="edit_score_title">Edit score</string>
    <string name="choose_goal_scorers">Select goal scorers</string>
    <string name="settings_title">Settings</string>

    <!-- home screen tabs -->
    <string name="fixtures_tab_label">Fixtures</string>
    <string name="results_tab_label">Results</string>
    <string name="results_label_form">Form</string>

    <!-- home screen menu -->
    <string name="home_menu_stats">Statistics</string>
    <string name="home_menu_clubs">Clubs</string>
    <string name="home_menu_comps">Competitions</string>
    <string name="home_menu_players">Players</string>
    <string name="home_menu_seasons">Seasons</string>
    <string name="home_menu_about">About</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_export_import">Export/Import</string>
    <string name="export_data_popup_title">Data Import/Export</string>
    <string name="export_option">Export to CSV</string>
    <string name="import_option">Import from CSV</string>

    <!-- fixture screen menu -->
    <string name="fixture_menu_edit">Edit</string>

    <!-- fixture screen buttons -->
    <string name="fixture_previous_label">Previous</string>
    <string name="fixture_next_label">Next</string>

    <!-- Fixture screen -->
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="attendance">Attendance: %d</string>
    <string name="score_format" translatable="false">%d - %d</string>
    <string name="long_date_format" translatable="false">EEE, dd MMM yyyy, HH:mm</string>
    <string name="short_date_format" translatable="false">dd MMM yyyy</string>
    <string name="time_format" translatable="false">kk:mm</string>
    <string name="versus">v</string>

    <!-- Statistics -->
    <string name="stats_tab_label_graphs">Graphs</string>
    <string name="stats_tab_label_numbers">Numbers</string>

    <!-- Edit item strings -->
    <string name="edit_full_name_label">Full name</string>
    <string name="edit_short_name_label">Short name</string>
    <string name="edit_code_label">Three letter code</string>
    <string name="edit_forename_label">Forename</string>
    <string name="edit_surname_label">Surname</string>
    <string name="edit_name_label">Name</string>
    <string name="edit_club_is_league_label">League opponent</string>
    <string name="edit_date_label">Date:</string>
    <string name="edit_time_label">Time:</string>
    <string name="edit_competition_label">Competition:</string>
    <string name="edit_opponent_label">Opponent:</string>
    <string name="edit_venue_label">Venue:</string>
    <string name="edit_score_label">Score:</string>
    <string name="edit_goal_scorers_label">Goal scorers:</string>
    <string name="edit_attendance_label">Attendance:</string>
    <string name="edit_season_label">Season:</string>
    <string name="edit_score_cardiff_goals">Cardiff:</string>
    <string name="edit_score_opponent_goals">Opponent:</string>
    <string name="edit_comp_is_league">This is a league</string>
    <string name="edit_changes_saved">Changes saved</string>
    <string name="edit_player_deleted">Player deleted</string>
    <string name="edit_fixture_deleted">Fixture deleted</string>
    <string name="edit_delete_player_query">Are you sure you want to delete this player?</string>
    <string name="edit_delete_fixture_query">Are you sure you want to delete this fixture?</string>

    <!-- Chooser titles -->
    <string name="competition_chooser_title">Choose competition</string>
    <string name="opponent_chooser_title">Choose opponent</string>
    <string name="player_chooser_title">Choose player</string>
    <string name="season_chooser_title">Choose season</string>

    <string name="goal_scorer_dialog_label_name">Name</string>
    <string name="goal_scorer_dialog_label_penalty">Penalty</string>

    <!-- Fixtures/results filter labels -->
    <string name="action_filter">Filter</string>
    <string name="filter_all">All games</string>
    <string name="filter_lge">League games</string>

    <!-- Player screen strings -->
    <string name="player_is_current">Current</string>
    <string name="player_edit_current">Currently at the club</string>
    <string name="player_name" translatable="false">%s %s</string>
    <string name="players_filter_label">Only show current</string>

    <!-- Competitions screen strings -->
    <string name="comps_filter_all">All</string>
    <string name="comps_filter_leagues">Leagues</string>
    <string name="comps_filter_cups">Cups</string>
    <string name="comps_filter_title">Filter:</string>

    <!-- Seasons screen strings -->
    <string name="season_is_current">Current</string>

    <!-- Clubs list strings -->
    <string name="clubs_filter_label">Only show league opponents</string>

    <!-- Common strings -->
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="form_label">Form</string>
    <string name="league_label">League</string>
    <string name="cup_label">Cup</string>
    <string name="are_you_sure">Are you sure?</string>

    <!-- Statistics, graphs choice -->
    <string-array name="graphs_descriptions">
        <item>Points</item>
        <item>Average points</item>
        <item>Goals scored</item>
        <item>Average goals scored</item>
        <item>Goals conceded</item>
        <item>Average goals conceded</item>
        <item>Goals difference</item>
        <item>Average goals difference</item>
        <item>Wins, draws &amp; losses</item>
        <item>Attendance</item>
        <item>Average attendance</item>
    </string-array>
    <!-- Stats numbers filters -->
    <string-array name="numbers_filters">
        <item>All</item>
        <item>Home games</item>
        <item>Away games</item>
        <item>Last 6 games</item>
        <item>Last 6 home games</item>
        <item>Last 6 away games</item>
    </string-array>
    <string-array name="game_type_filters">
        <item>All</item>
        <item>League</item>
    </string-array>
    <!-- Numerical statistic descriptions -->
    <string-array name="numerical_stats_descriptions">
        <item>1. Points</item>
        <item>2. Number of wins</item>
        <item>3. Number of draws</item>
        <item>4. Number of defeats</item>
        <item>5. Goals scored</item>
        <item>6. Goals conceded</item>
        <item>7. Goals difference</item>
        <item>8. Average attendance</item>
        <item>9. Minimum attendance</item>
        <item>10.Maximum attendance</item>
        <item>11.Top scorer</item>
        <item>12.Win percentage</item>
        <item>13.Current unbeaten run</item>
        <item>14.Current winning run</item>
        <item>15.Current losing run</item>
        <item>16.Longest unbeaten run</item>
        <item>17.Longest winning run</item>
        <item>18.Longest losing run</item>
        <item>19.Number of games since failing to score</item>
        <item>20.Number of games since conceding</item>
        <item>21.Number of games when failed to score</item>
        <item>22.Total clean sheets</item>
        <item>23.Total nil-nil draws</item>
    </string-array>

    <!--
        Strings related to Settings
    -->
    <!-- only league games, or all games -->
    <string name="pref_key_league_only">pref_key_league_only</string>
    <string name="pref_title_league_only">Use only league fixtures</string>
    <string name="pref_summary_on_league_only">Fixtures/results lists will only show league games
        and statistics will only reference the league games.</string>
    <string name="pref_summary_off_league_only">Fixtures/results lists will show all games and
        statistics will also reference all games.</string>
    <!-- Default season -->
    <string name="pref_key_season">pref_key_season</string>
    <string name="pref_title_season">Selected season</string>
    <string name="title_activity_filter">Filters</string>
    <string name="pref_key_show_current_players">pref_current_players_only</string>
    <string name="pref_key_show_current_opponents">pref_current_opponents_only</string>

</resources>
