<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="@dimen/default_activity_margin"
    tools:context=".fragments.EditScoreFragment">

    <TextView
        android:id="@+id/editScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/edit_score_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:text="@string/edit_score_cardiff_goals"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/edit_score_opponent_goals"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <NumberPicker
        android:id="@+id/cardiffScorePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="8dp" />

    <NumberPicker
        android:id="@+id/opponentScorePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/editScoreOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:text="@android:string/ok" />

</GridLayout>
